验证初调、复校有合格记录

--- a/App.config
+++ b/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
+  <appSettings>
+    <!--刻录机IP-->
+    <add key="SERVER_IP" value="127.0.0.1"/>
+    <!--刻录机端口-->
+    <add key="SERVER_PORT" value="6060"/>
+    <!--本机端口-->
+    <add key="CLIENT_PORT" value="9090"/>
+    <!--设备类型-->
+    <add key="DEVICE_TYPE" value="E024"/>
+    <!--设备号-->
+    <add key="NO" value="E02401"/>
+    <!--上次刻录行号-->
+    <add key="LAST_CARVE_LINE" value="-1"/>
+    <!--上次刻录MSN-->
+    <add key="LAST_CARVE_MSN" value=""/>
+    <!--心跳间隔-->
+    <add key="HEARTBEAT_TIMESPAN" value="1000"/>
+    <!--MSN文件路径-->
+    <add key="MSN_FILE_PATH" value=""/>
+    <!--主控数据库-->
+    <add key="MASTER_DB_CONNSTR" value="Server=10.50.57.1;DataBase=YQALServer;uid=sa;pwd=aaaaaa;Connect Timeout=5"/>
+    <!--数据库-->
+    <add key="SQLCONN" value="Server=10.130.7.250;DataBase=producthw;uid=sa;pwd=1QaW3EdR5;Connect Timeout=5"/>
+  </appSettings>
 </configuration>
