--- a/App.config
+++ b/App.config
@@ -26,5 +26,9 @@
     <add key="MASTER_DB_CONNSTR" value="Server=10.50.57.1;DataBase=YQALServer;uid=sa;pwd=aaaaaa;Connect Timeout=5"/>
     <!--数据库-->
     <add key="SQLCONN" value="Server=10.130.7.250;DataBase=producthw;uid=sa;pwd=1QaW3EdR5;Connect Timeout=5"/>
+
+    <add key="PLC_IP" value="10.50.57.61"/>
+    <add key="PLC_PORT" value="8501"/>
+    <add key="CARVE_ADDR" value="DM235"/>
   </appSettings>
 </configuration>
