增加在艾孚数据库查询精度检测数据有无判断

--- a/App.config
+++ b/App.config
@@ -24,8 +24,8 @@
     <add key="MSN_FILE_PATH" value=""/>
     <!--主控数据库-->
     <add key="MASTER_DB_CONNSTR" value="Server=10.50.57.1;DataBase=YQALServer;uid=sa;pwd=aaaaaa;Connect Timeout=5"/>
-    <!--数据库-->
-    <add key="SQLCONN" value="Server=10.130.7.250;DataBase=producthw;uid=sa;pwd=1QaW3EdR5;Connect Timeout=5"/>
+    <!--艾孚数据库-->
+    <add key="AF_DB_CONNSTR" value="Server=10.130.7.250;DataBase=producthw;uid=sa;pwd=1QaW3EdR5;Connect Timeout=5"/>
 
     <add key="PLC_IP" value="10.50.57.61"/>
     <add key="PLC_PORT" value="8501"/>
